--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.20.0",
+    "firebase-admin": "^11.7.0",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.1",
     "mongodb": "^4.13.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
     "winston": "^3.8.2",
@@ -35,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
