--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@sentry/node": "^7.45.0",
     "@sentry/tracing": "^7.45.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.20.0",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "^9.0.0",
