--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "auth service with clean architecture",
   "scripts": {
     "test": "NODE_ENV=test jest --watchAll --collectCoverage",
-    "build": "tsc",
+    "build": "tsc && NODE_ENV=production",
     "start": "tsc && NODE_ENV=production node build/main.js",
     "dev": "tsc && NODE_ENV=development nodemon -q build/main.js",
     "db:seed": "npx sequelize-cli db:seed:all",
@@ -23,7 +23,7 @@
     "express": "^4.18.2",
     "firebase": "^9.20.0",
     "firebase-admin": "^11.7.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.1.1",
     "mongodb": "^4.13.0",
     "morgan": "^1.10.0",
