--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^11.7.0",
     "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.1.1",
+    "module-alias": "^2.2.3",
     "mongodb": "^4.13.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
